welcome.lessons.welcome.array.search.IndexOfValue.scala.code
def indexOfValue(nums:Array[Int] ,lookingFor:Int): Int = {
  var p:Int = -1
  val n = nums.length
  for (i <- 0 to n-1) {
    if (lookingFor = nums(i)) {
      p = i
    }
  }
  return p
}